force-app/main/default/objects/Races__c/fields/CircuitUrl__c.field-meta.xml
<CustomField>
    <fullName>CircuitUrl__c</fullName>
    <label>CircuitUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>