force-app/main/default/objects/Races__c/fields/RaceDate__c.field-meta.xml
<CustomField>
    <fullName>RaceDate__c</fullName>
    <label>RaceDate</label>
    <type>Date</type>
</CustomField>